<resources>
    <string name="app_name" translatable="false">Xtra</string>
    <string name="games">Games</string>
    <string name="popular">Popular</string>
    <string name="following">Following</string>
    <string name="downloads">Downloads</string>
    <string name="menu">Menu</string>
    <string name="retry">Retry</string>
    <string name="connection_error">Error connecting to the server. Please try again</string>
    <string name="sort">Sort</string>
    <string name="upload_date">Upload date</string>
    <string name="today">Today</string>
    <string name="this_week">This week</string>
    <string name="this_month">This month</string>
    <string name="all_time">All time</string>
    <string name="view_count">View count</string>
    <string name="period">Period</string>
    <string name="apply">Apply</string>
    <string name="sort_and_period">Sort by: %1$s. Period: %2$s</string>
    <string name="trending">Trending</string>
    <string name="live">Live</string>
    <string name="videos">Videos</string>
    <string name="clips">Clips</string>
    <string name="scroll_down">Scroll down</string>
    <string name="auto">Auto</string>
    <string name="audio_only">Audio only</string>
    <string name="chat_only">Chat only</string>
    <string name="select_quality">Select quality</string>
    <string name="download">Download</string>
    <string name="downloading">Downloading</string>
    <string name="downloaded">Download complete</string>
    <string name="uploaded_date">Uploaded %s</string>
    <string name="downloaded_date">Downloaded %s</string>
    <string name="welcome">Welcome</string>
    <string name="login_prompt">Log in to Twitch to see your followed channels</string>
    <string name="log_in">Log in</string>
    <string name="log_out">Log out</string>
    <string name="skip">Skip</string>
    <string name="specify_time">Specify time</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="duration">Duration: %s</string>
    <string name="invalid_time">Invalid time</string>
    <string name="from_is_greater">Time From must be less than To</string>
    <string name="to_is_lesser">Time To must be greater than From</string>
    <string name="to_is_longer">To can\'t be greater than video length</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure">Are you sure you want to delete this video?</string>
    <string name="token_expired">Your session has expired. Please log in again</string>
    <string name="no_connection">No Internet connection</string>
    <string name="connection_restored">Back online</string>
    <string name="follow_tab_login_prompt">Your followed channels will be shown here</string>
    <string name="downloads_empty">Your downloaded videos will be shown here</string>
    <string name="notification_downloads_channel_title">Downloads</string>
    <string name="notification_downloads_channel_id" translatable="false">xtra_downloads_channel</string>
    <string name="old_notification_downloads_channel_id" translatable="false">xtra_download_channel</string>
    <string name="storage_permission_title">The app needs storage permission</string>
    <string name="storage_permission_message">Storage permission is required to download videos.</string>
    <string name="permission_denied">Required permissions were denied</string>
    <string name="nothing_here">Nothing here</string>
    <string name="watch_live">Watch Live</string>
    <string name="error_stream">Error when loading stream</string>
    <string name="dark">Dark</string>
    <string name="amoled">Black</string>
    <string name="light">Light</string>
    <string name="choose_theme">Choose a theme</string>
    <string name="settings">Settings</string>
    <string name="theme">Theme</string>
    <string name="landscape_chat_width">Landscape chat width</string>
    <string name="percentage_of_screen">% of the screen</string>
    <string name="unknown_error">Unknown error</string>
    <string name="portrait_column_count">Portrait column count</string>
    <string name="landscape_column_count">Landscape column count</string>
    <string name="download_via_wifi">Download using Wi-Fi</string>
    <string name="always">Always</string>
    <string name="just_once">Just once</string>
    <string name="download_preference">Preferred download network</string>
    <string name="any_network">Over any network</string>
    <string name="wifi_only">Over Wi-Fi only</string>
    <string name="ask_every_time">Ask me every time</string>
    <string name="download_size_warning">Long videos can be up to 10GB in size. Do you want to download over Wi-Fi?</string>
    <string name="internal_storage">Internal storage</string>
    <string name="save_to">Save to</string>
    <string name="thank_you">Thank you!</string>
    <string name="rate_app_message">If you enjoy using Xtra, please take a moment to rate it. It won\'t take more than a minute. Thanks for your support!</string>
    <string name="rate">Rate</string>
    <string name="rate_app">Rate app</string>
    <string name="remind_me_later">Remind me later</string>
    <string name="no_thanks">No, thanks</string>
    <string name="no_storage_detected">No available storage detected (most likely the phone is connected to a computer).</string>
    <string name="rewind">Rewind</string>
    <string name="forward">Fast forward</string>
    <string name="seconds">%s seconds</string>
    <string name="unfollow">Unfollow %s?</string>
    <string name="now_following">You\'re now following %s</string>
    <string name="unfollowed">Unfollowed %s</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="search">Search</string>
    <string name="chat_replay_unavailable">Chat replay is unavailable</string>
    <string name="video_subscribers_only">This video is only available to subscribers and cannot be viewed in the app due to Twitch\'s restrictions</string>
    <string name="player_error">Player error. Retrying. Disable Adblock if streams are not loading</string>
    <string name="picture_in_picture">Picture-in-Picture</string>
    <string name="continue_playback">Continue playback outside of the app</string>
    <string name="source_vod_start">Start: %s</string>
    <string name="source_vod_end">End: %s</string>
    <string name="stream_ended">The stream has ended</string>
    <string name="viewers">%s viewers</string>
    <string name="views">%s views</string>
    <string name="play_services_not_available">Google Play Services are not available. Some functions may not work correctly</string>
    <string name="download_pending">Pending</string>
    <string name="downloading_progress">Downloading: %d%%</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="error_loading_user">Error loading user profile</string>
    <string name="reply">Reply</string>
    <string name="copy_message">Copy message</string>
    <string name="view_profile">View profile</string>
    <string name="chat">Chat</string>
    <string name="recent_emotes">Recent</string>
    <string name="notification_playback_channel_title">Playback</string>
    <string name="notification_playback_channel_id" translatable="false">xtra_playback_channel</string>
    <string name="channels">Channels</string>
    <string name="video">Video</string>
    <string name="watch_video">Watch full video</string>
    <string name="new_update">What\'s new in this update</string>
    <string name="dont_show_changelogs">Don\'t show changelogs</string>
    <string name="show_changelogs">Show changes after update</string>
    <string name="donate_prompt">How much would you like to donate?</string>
    <string name="thank_you_so_much">Thank you so much!!! ❤❤❤</string>
    <string name="support_the_developer">Support the developer</string>
    <string name="animated_emotes">Animated emotes</string>
    <string name="authorization">Authorization</string>
    <string name="trouble_logging_in">Having trouble logging in?</string>
    <string name="time_followed">Time followed</string>
    <string name="alphabetically">Alphabetically</string>
    <string name="last_broadcast">Last broadcast</string>
    <string name="order">Order</string>
    <string name="descending">Descending</string>
    <string name="ascending">Ascending</string>
</resources>