<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp">
<!--TODO fix theme doesn't apply here-->
    <RadioGroup
        android:id="@+id/sort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sort"
            android:textStyle="bold"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp" />

        <RadioButton
            android:id="@+id/time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/upload_date"/>

        <RadioButton
            android:id="@+id/views"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_count"/>
    </RadioGroup>

    <RadioGroup
        android:id="@+id/period"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/period"
            android:textStyle="bold"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp" />

        <RadioButton
            android:id="@+id/today"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/today"/>

        <RadioButton
            android:id="@+id/week"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/this_week"/>

        <RadioButton
            android:id="@+id/month"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/this_month"/>

        <RadioButton
            android:id="@+id/all"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/all_time"/>

    </RadioGroup>

    <Button
        android:id="@+id/apply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/apply"/>

</LinearLayout>