<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <androidx.appcompat.widget.Toolbar
        android:id="@id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/app_name">

        <ImageView
            android:id="@+id/search"
            style="@style/Search"/>
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/text"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:text="@string/follow_tab_login_prompt"
        app:autoSizeMaxTextSize="36sp"
        app:autoSizeMinTextSize="18sp"
        android:gravity="center_horizontal"
        android:layout_centerInParent="true"
        app:autoSizeStepGranularity="2sp"
        app:autoSizeTextType="uniform" />

    <Button
        android:id="@+id/login"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/log_in"
        android:textSize="14sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/text"/>
</RelativeLayout>